# 3_imu

./: README.md
imu3_description/: CMakeLists.txt  package.xml
imu3_description/file_txt/: Matrix_Corrector_Factors.txt  Matrix_Corrector_Factors_imu_glove.txt  cal imu glove 17.txt
imu3_description/include/: IMUGL old.h  IMUGL_mag_calibration.h
imu3_description/launch/: display.launch  my_rviz.rviz
imu3_description/model/: imu.urdf.xacro  materials.urdf.xacro
imu3_description/robot/: imu3_simple.urdf.xacro
imu3_description/src/: IMUGL.cpp  main.cpp
imu3_description/src/mag_calibration/: IMUGL_mag_calibration.cpp  magcal firmaware.txt  main_mag_calibration.cpp
imu3_description/urdf/: imu.xacro
